--- a/application.yml
+++ b/application.yml
@@ -1,8 +1,8 @@
 eureka:
+  instance:
+    prefer-ip-address: true
   client:
-    register-with-eureka: true
     fetch-registry: true
+    register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/eureka/
-    instance:
-      hostname: localhost
+      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
